Fixxed bg color added dot clases fix overflow

--- a/Frontend/src/Css/Landing.css
+++ b/Frontend/src/Css/Landing.css
@@ -1,36 +1,33 @@
 body {
-  background-color: black;
+  background-color: rgba(27, 27, 27, 255);
   width: 100%;
   height: 100vh;
   margin: 0px 0px 0px 0px;
   padding: 0px 0px 0px 0px;
+  overflow-x: hidden;
 }
 * {
   scrollbar-color: #ffeaa7 #1f2029;
   scrollbar-width: thin;
 }
-
 *::-webkit-scrollbar {
   position: absolute;
   z-index: 99;
   width: 1vw;
   height: 1vw;
 }
-
 *::-webkit-scrollbar-track {
   background: #ffeaa7;
   width: 1vw;
 }
-
 *::-webkit-scrollbar-thumb {
-  background-color: #1f2029;
+  background-color: rgba(27, 27, 27, 255);
   border-radius: 20px;
   border-left: 1px solid #ffeaa7;
   border-right: 1px solid #ffeaa7;
   border-top: 1px solid #ffeaa7;
   border-bottom: 1px solid #ffeaa7;
 }
-
 h1,
 h2,
 h3,
@@ -41,7 +38,33 @@ h6 {
   font-weight: 400;
   letter-spacing: 1pt;
 }
+.dot-big {
+  position: absolute;
+  height: 50vw;
+  width: 50vw;
+  background-color: #2b26c3;
+  border-radius: 50%;
+  mix-blend-mode: hard-light;
+}
+.dot-medium {
+  position: absolute;
+  width: 30vw;
+  height: 30vw;
+  background-color: #2b26c3;
+  border-radius: 50%;
+  mix-blend-mode: hard-light;
+}
 
+.dot-small {
+  position: absolute;
+  height: 10vw;
+  width: 10vw;
+  background-color: #2b26c3;
+  border-radius: 50%;
+  mix-blend-mode: hard-light;
+}
+
+/*
 p {
   font-family: "Open Sans", sans-serif;
   font-size: 12pt;
@@ -49,3 +72,4 @@ p {
   line-height: 25px;
   color: #898989;
 }
+*/
